<?xml version="1.0"?>
<package>
  <name>mil_passive_sonar</name>
  <version>1.0.0</version>
  <description>Package for multilateration and passive sonar</description>

  <maintainer email="Matthew.langford95@gmail.com">Matthew Langford</maintainer>
  <maintainer email="dsoto@ufl.edu">David Soto</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

</package>
