<?xml version="1.0"?>
<package format="2">
  <name>mil_usb_to_can</name>
  <version>0.0.0</version>
  <description>The mil_usb_to_can package</description>
  <maintainer email="kallen@todo.todo">kallen</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>serial</exec_depend>
</package>
