<?xml version="1.0"?>
<package>
  <name>sub8_actuator_driver</name>
  <version>0.0.0</version>
  <description>The sub8_actuator_driver package</description>

  <maintainer email="matthew.langford95@gmail.com">Matthew Langford</maintainer>

  <license>MIL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>

  <run_depend>rospy</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>